Bug 817329 - "This addon could not be installed because it appears to be corrupt" is quite invisible. r=mconley,ui-review=bwinton

--- a/mail/themes/gnomestripe/mail/messenger.css
+++ b/mail/themes/gnomestripe/mail/messenger.css
@@ -398,15 +398,32 @@ treechildren::-moz-tree-cell-text {
 }
 
 notification[value="addon-install-blocked"],
-notification[value="addon-install-failed"],
 notification[value="addon-install-complete"] {
   background-image: url("chrome://mozapps/skin/extensions/stripes-info-negative.png"),
                     linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5));
   background-repeat: repeat-x;
 }
 
+notification[value="addon-install-failed"] {
+  background-image: linear-gradient(rgb(255, 100, 100), rgb(204, 85, 85));
+}
+
 notification[value="addon-install-blocked"] .notification-inner,
 notification[value="addon-install-failed"] .notification-inner,
 notification[value="addon-install-complete"] .notification-inner {
   border: none;
+}
+
+notification[value="addon-install-failed"] .messageCloseButton {
+  -moz-appearance: none;
+  list-style-image: url("chrome://messenger/skin/icons/close-inverted.png");
+  -moz-image-region: rect(0, 16px, 16px, 0);
+}
+
+notification[value="addon-install-failed"] .messageCloseButton:hover {
+  -moz-image-region: rect(0, 32px, 16px, 16px);
+}
+
+notification[value="addon-install-failed"] .messageCloseButton:hover:active {
+  -moz-image-region: rect(0, 48px, 16px, 32px);
 }
