--- a/mail/themes/qute/mail/messenger-aero.css
+++ b/mail/themes/qute/mail/messenger-aero.css
@@ -224,7 +224,6 @@ treechildren::-moz-tree-cell-text {
   }
 
   notification[value="addon-install-blocked"],
-  notification[value="addon-install-failed"],
   notification[value="addon-install-complete"] {
     background-image: url("chrome://mozapps/skin/extensions/stripes-info-negative.png"),
                       linear-gradient(rgba(204, 217, 234, 0.5),
